# backend/app/api/v1/router.py
@@ -9,6 +9,7 @@ from .routes import (
     google_photos,
     health,
     panoramas,
+    photo_edits,
     uploads,
     users,
 )
@@ -22,5 +23,6 @@ router.include_router(albums.router)
 router.include_router(external_media.router)
 router.include_router(assets.router)
 router.include_router(panoramas.router)
+router.include_router(photo_edits.router)
 router.include_router(google_photos.router)
 router.include_router(config.router)
